--- a/src/Z.glade
+++ b/src/Z.glade
@@ -5,6 +5,7 @@
   <object class="GtkBox" id="BuildingView">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
+    <property name="resize_mode">immediate</property>
     <property name="orientation">vertical</property>
     <child>
       <object class="GtkImage" id="image1">
@@ -173,6 +174,7 @@ here</property>
   <object class="GtkBox" id="GroupView">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
+    <property name="resize_mode">immediate</property>
     <property name="orientation">vertical</property>
     <child>
       <placeholder/>
@@ -201,6 +203,7 @@ GUI here</property>
     <property name="halign">end</property>
     <property name="hexpand">True</property>
     <property name="border_width">10</property>
+    <property name="resize_mode">immediate</property>
     <property name="orientation">vertical</property>
     <child>
       <object class="GtkImage" id="Portrait">
