--- a/src/Z.glade
+++ b/src/Z.glade
@@ -3,12 +3,13 @@
 <interface>
   <requires lib="gtk+" version="3.12"/>
   <object class="GtkBox" id="BuildingView">
+    <property name="width_request">300</property>
     <property name="visible">True</property>
     <property name="can_focus">False</property>
     <property name="resize_mode">immediate</property>
     <property name="orientation">vertical</property>
     <child>
-      <object class="GtkImage" id="image1">
+      <object class="GtkImage" id="FactoryImage">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="stock">gtk-missing-image</property>
@@ -125,8 +126,8 @@ here</property>
     </child>
   </object>
   <object class="GtkWindow" id="GameWindow">
-    <property name="width_request">800</property>
-    <property name="height_request">600</property>
+    <property name="width_request">1200</property>
+    <property name="height_request">800</property>
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">Z</property>
     <property name="window_position">center</property>
@@ -150,16 +151,40 @@ here</property>
           </packing>
         </child>
         <child>
-          <object class="GtkBox" id="SidePanel">
-            <property name="width_request">200</property>
+          <object class="GtkBox" id="boxx">
+            <property name="width_request">300</property>
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="halign">end</property>
             <property name="hexpand">True</property>
             <property name="border_width">10</property>
-            <property name="orientation">vertical</property>
             <child>
-              <placeholder/>
+              <object class="GtkSeparator" id="separator1">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="orientation">vertical</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
+                <property name="position">0</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkBox" id="SidePanel">
+                <property name="width_request">300</property>
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="orientation">vertical</property>
+                <child>
+                  <placeholder/>
+                </child>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
+                <property name="position">1</property>
+              </packing>
             </child>
           </object>
           <packing>
@@ -172,6 +197,7 @@ here</property>
     </child>
   </object>
   <object class="GtkBox" id="GroupView">
+    <property name="width_request">300</property>
     <property name="visible">True</property>
     <property name="can_focus">False</property>
     <property name="resize_mode">immediate</property>
@@ -207,6 +233,7 @@ GUI here</property>
     <property name="orientation">vertical</property>
     <child>
       <object class="GtkImage" id="Portrait">
+        <property name="width_request">300</property>
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="stock">gtk-missing-image</property>
