--- a/Z.glade
+++ b/Z.glade
@@ -265,8 +265,6 @@ GUI here</property>
     </child>
   </object>
   <object class="GtkWindow" id="InitialWindow">
-    <property name="width_request">300</property>
-    <property name="height_request">100</property>
     <property name="can_focus">False</property>
     <property name="resizable">False</property>
     <child>
@@ -348,7 +346,7 @@ GUI here</property>
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkEntry" id="entry1">
+                  <object class="GtkEntry" id="PortEntry">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="text" translatable="yes">8000</property>
@@ -393,7 +391,7 @@ GUI here</property>
               </packing>
             </child>
             <child>
-              <object class="GtkEntry" id="entry2">
+              <object class="GtkEntry" id="NameEntry">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="text" translatable="yes">Player</property>
