--- a/Z.glade
+++ b/Z.glade
@@ -135,7 +135,7 @@ Range: xxx
       <placeholder/>
     </child>
   </object>
-  <object class="GtkWindow" id="GameWindow">
+  <object class="GtkApplicationWindow" id="GameWindow">
     <property name="width_request">1200</property>
     <property name="height_request">800</property>
     <property name="can_focus">False</property>
