Update panel views

--- a/Z.glade
+++ b/Z.glade
@@ -435,6 +435,7 @@ GUI here</property>
     <property name="border_width">10</property>
     <property name="resize_mode">immediate</property>
     <property name="orientation">vertical</property>
+    <property name="homogeneous">True</property>
     <child>
       <object class="GtkImage" id="Portrait">
         <property name="width_request">300</property>
@@ -461,37 +462,6 @@ Weapon: xxx</property>
         <property name="expand">False</property>
         <property name="fill">True</property>
         <property name="position">1</property>
-      </packing>
-    </child>
-    <child>
-      <object class="GtkBox" id="unitCreation">
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
-        <property name="orientation">vertical</property>
-        <child>
-          <placeholder/>
-        </child>
-        <child>
-          <placeholder/>
-        </child>
-        <child>
-          <object class="GtkButton" id="Create">
-            <property name="label" translatable="yes">Create Unit</property>
-            <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <property name="receives_default">True</property>
-          </object>
-          <packing>
-            <property name="expand">False</property>
-            <property name="fill">True</property>
-            <property name="position">2</property>
-          </packing>
-        </child>
-      </object>
-      <packing>
-        <property name="expand">False</property>
-        <property name="fill">True</property>
-        <property name="position">2</property>
       </packing>
     </child>
   </object>
