--- a/Z.glade
+++ b/Z.glade
@@ -201,7 +201,8 @@ Range: xxx
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="margin_bottom">10</property>
-                    <property name="label" translatable="yes">Panel display label</property>
+                    <property name="label" translatable="yes">Z</property>
+                    <property name="ellipsize">end</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
