--- a/Z.glade
+++ b/Z.glade
@@ -6,6 +6,7 @@
     <property name="width_request">300</property>
     <property name="visible">True</property>
     <property name="can_focus">False</property>
+    <property name="halign">start</property>
     <property name="resize_mode">immediate</property>
     <property name="orientation">vertical</property>
     <child>
@@ -36,7 +37,7 @@
           </object>
           <packing>
             <property name="expand">False</property>
-            <property name="fill">True</property>
+            <property name="fill">False</property>
             <property name="position">0</property>
           </packing>
         </child>
