Fixes to panels info

--- a/Z.glade
+++ b/Z.glade
@@ -377,7 +377,6 @@
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="halign">end</property>
-            <property name="hexpand">True</property>
             <property name="border_width">10</property>
             <child>
               <object class="GtkSeparator" id="separator1">
@@ -752,7 +751,16 @@ GUI here</property>
           </packing>
         </child>
         <child>
-          <placeholder/>
+          <object class="GtkToggleButton" id="ReadyButton">
+            <property name="label" translatable="yes">Ready</property>
+            <property name="visible">True</property>
+            <property name="can_focus">True</property>
+            <property name="receives_default">True</property>
+          </object>
+          <packing>
+            <property name="left_attach">0</property>
+            <property name="top_attach">4</property>
+          </packing>
         </child>
       </object>
     </child>
@@ -878,7 +886,6 @@ GUI here</property>
     <property name="can_focus">False</property>
     <property name="halign">end</property>
     <property name="hexpand">True</property>
-    <property name="border_width">10</property>
     <property name="resize_mode">immediate</property>
     <property name="orientation">vertical</property>
     <property name="homogeneous">True</property>
