--- a/Z.glade
+++ b/Z.glade
@@ -364,6 +364,8 @@
             <property name="tooltip_text" translatable="yes">
 </property>
             <property name="margin_bottom">15</property>
+            <property name="hexpand">True</property>
+            <property name="vexpand">True</property>
           </object>
           <packing>
             <property name="expand">False</property>
@@ -1007,7 +1009,6 @@ Map3</property>
     <property name="visible">True</property>
     <property name="can_focus">False</property>
     <property name="halign">end</property>
-    <property name="hexpand">True</property>
     <property name="resize_mode">immediate</property>
     <property name="orientation">vertical</property>
     <property name="homogeneous">True</property>
